@@ -6,6 +6,8 @@ Revision history for {{$dist->name}}
           - update generated CONTRIBUTING file to filter out local plugins
             when running 'dzil authordeps --missing', and to mention the irc
             channel when available
+          - new "airplane" mode, to faciliate development while the network is
+            not available
 
 0.041     2013-11-29 06:02:08Z
           - add explicit dep on Pod::Markdown, to get the version that creates
